--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,6 @@ repos:
     rev: v4.5.0
     hooks:
       - id: check-added-large-files
-        exclude: package-lock.json
       - id: check-case-conflict
       - id: detect-private-key
       - id: end-of-file-fixer
@@ -14,3 +13,10 @@ repos:
     hooks:
       - id: detect-secrets
         args: ["--baseline", ".secrets.baseline"]
+  -   repo: local
+      hooks:
+        -   id: spotless-check
+            name: Spotless Check
+            entry: gradle spotlessCheck
+            language: system
+            types: [java]
