--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -8,12 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11.2'
+
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.5
+
+      - name: Spotless
+        run: ./gradlew spotlessCheck
+
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: "--all-files"
