--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -13,6 +13,11 @@ jobs:
         with:
           python-version: '3.11.2'
 
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'corretto'
+
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.5
