Added Dockerfile and logging fixes

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,22 @@
 plugins {
     id 'java'
+    id 'application'
     id 'com.diffplug.spotless' version '6.22.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.javadiscord.bot'
 version = '1.0-SNAPSHOT'
+
+application {
+    mainClass = 'com.javadiscord.bot.Main'
+}
+
+shadowJar {
+    archiveBaseName.set('Java-Discord-Bot')
+    archiveClassifier.set('')
+    archiveVersion.set('')
+}
 
 spotless {
     java {
@@ -26,7 +38,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.theokanning.openai-gpt3-java:service:0.16.0'
+    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
     implementation 'com.rometools:rome:2.1.0'
     implementation 'net.dv8tion:JDA:5.0.0-beta.18'
 
@@ -36,7 +48,7 @@ dependencies {
 
     implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
-    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.22.1'
+   // annotationProcessor 'org.apache.logging.log4j:log4j-core:2.22.1'
 }
 
 test {
