Added `stage` task

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ shadowJar {
     archiveVersion.set('')
 }
 
+tasks.register('stage') {
+    dependsOn build, clean
+}
+
 spotless {
     java {
         importOrder()
