--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencies {
    // annotationProcessor 'org.apache.logging.log4j:log4j-core:2.22.1'
 }
 
+tasks.register('stage') {
+    dependsOn build, clean
+}
+
 test {
     useJUnitPlatform()
 }
