--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.javadiscord.bot'
-version = '1.0-SNAPSHOT'
+version = '1.10.0'
 
 application {
     mainClass = 'com.javadiscord.bot.Main'
