--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.docker-java:docker-java:3.3.6'
+
     implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
     implementation 'com.rometools:rome:2.1.0'
     implementation 'net.dv8tion:JDA:5.0.0-beta.18'
